Create test harness to run tests in a browser Command-line tests through Karma are great for testing a bunch of browsers simultaneously but they're very hard to debug. Add test/index.html to run the tests in a browser manually and allow easier debugging. Override manifest request MIME types so that responseXML is available even if the server has misoconfigured their MPD mime types. Add grunt-contrib-connect for easier testing of the example page. Stub the encrypted media workflow a bit.

--- a/example.html
+++ b/example.html
@@ -23,7 +23,7 @@
     </style>
 
     <script src="node_modules/video.js/dist/video-js/video.dev.js"></script>
-    <script src="dist/vjs-html5-dash.js"></script>
+    <script src="dist/vjs-html5-dash-debug.js"></script>
 </head>
 <body>
 <div class="info">
@@ -44,8 +44,10 @@
     <!-- WORKING AUDIO & VIDEO -->
 
     <!-- SEGMENT LIST CATEGORY: Segment Template -->
+
+    <source src="test/fixtures/car.mpd" type="application/dash+xml">
     <!--<source src="http://dash.edgesuite.net/envivio/dashpr/clear/Manifest.mpd" type='application/dash+xml'>-->
-    <source src="http://dash.brightcove.com/assets/shiv/fire_template_5/stream.mpd" type='application/dash+xml'>
+    <!-- <source src="http://dash.brightcove.com/assets/shiv/fire_template_5/stream.mpd" type='application/dash+xml'> -->
     <!--<source src="http://dash.brightcove.com/assets/nine-3/M030KHWA1/dash/stream.mpd" type='application/dash+xml'>-->
     <!--<source src="http://dash.brightcove.com/assets/nine-3/BLOCFF14_19_A/dash/stream.mpd" type='application/dash+xml'>-->
     <!--<source src="http://dash.brightcove.com/assets/nine-3/WHWA14_946_A/dash/stream.mpd" type='application/dash+xml'>-->
