Working example of EME with DASH/CENC Create and hook up the decrypter module when the DASH source handler is invoked. Emulate the latest version of the EME spec by implementing it against v0.1b, the version that is available in Chrome 40. Implement default content protection handling that would allow a downstream developer to listen for "mediakeymessage" on the player and then supply a license to play protected media. This mechanism is much less flexible than the full set of EME APIs but is also a lot less coding to integrate against. Generalize segment template duration calculation to return the maximum duration of children segment elements if a duration is not available at the template level. Ensure relative MPD URLs are concatenated with forward-slashes joining path parts. Generalize media set lookups to search representation children of adapation set elements in addition to the adapation set itself. Switch the MPD type of the EME fixture manifest to "static" to avoid the incomplete dynamic manifest handling logic.

--- a/example.html
+++ b/example.html
@@ -66,5 +66,26 @@
     <!--<source src="http://eu1.eastmark.net/pdash/testpic_6s/ManifestController.mpd" type='application/dash+xml'>-->
     <!--<source src="http://b028.wpc.azureedge.net/80B028/SampleStream/49be9c8c-0317-470f-94a2-7472732dc844/2cfaa74d-196a-4125-9c22-b84cbe4e9df9.ism/ManifestController(format=mpd-time-csf)" type='application/dash+xml'>-->
 </video>
+<script>
+  var player = videojs('vid1');
+
+  // if "mediakeymessage" is triggered, the video is encrypted and
+  // requires a license
+  player.on('mediakeymessage', function(event) {
+
+    // make a request to the example license server
+    var xhr = new XMLHttpRequest();
+    xhr.responseType = 'arraybuffer';
+    xhr.open('POST', 'http://widevine-proxy.appspot.com/proxy');
+    xhr.onreadystatechange = function() {
+      if (this.readyState === 4) {
+
+        // supply the license to the active media key session
+        return event.mediaKeySession.update(new Uint8Array(this.response));
+      }
+    };
+    xhr.send(event.message);
+  });
+</script>
 </body>
 </html>
